apps/sample-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
  namespace: sample-api
spec:
  selector:
    app: sample-api
  ports:
    - port: 80
      targetPort: 80
